spacing need to fix

--- a/Flipping Card UI Design/bdo-debit-card.css
+++ b/Flipping Card UI Design/bdo-debit-card.css
@@ -28,7 +28,6 @@ body {
 /* Header Section */
 header, 
 .logo {
-  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -46,15 +45,13 @@ header h5 {
 
 /* Middle Section */
 .container .middle-section {
-  margin-top: 20px;
+  margin-top: 5px;
   display: flex;
   align-items: center;
   justify-content:  space-between;
 }
 
 .middle-section .chip-container {
-  margin-top: 5px;
-  margin-bottom: 5px;
   width: 70px;
   height: 40px;
   background: rgba(0, 85, 165, 0.1);
@@ -91,7 +88,7 @@ middle-section,
 }
 
 h5.number {
-  margin-top: 10px;
+  margin-top: 5px;
   margin-left: 4px;
   font-size: 18px;
   letter-spacing: 1px;
